# femtin_template

./: CMakeLists.txt  LICENSE  README.md  femtin_template.doxyfile
doc/: CMakeLists.txt  config.doxyfile  readme.md
example/: readme.md
example/example_template/: CMakeLists.txt
example/example_template/src/: main.cpp
source/: CMakeLists.txt  comp_name.pc.in
source/doc/: mainpage.md
source/inc/: header_template.h  template.h
source/interface/: interface_template.h  readme.md
source/src/: main.cpp  template.cpp
test/catch/: CMakeLists.txt
test/catch/src/: test_template.cpp
test/unit_test/catch/: CMakeLists.txt
test/unit_test/catch/inc/: test_helper.h
test/unit_test/catch/src/: main.cpp  test_template.cpp
test/unit_test/gtest/: CMakeLists.txt
test/unit_test/gtest/src/: main.cpp  test_template.cpp
